--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="theme-color" content="#000000" />
-  <link rel="shortcut icon" type="image/ico" href="/assets/favicon.0e726a38.ico" />
+  <link rel="shortcut icon" type="image/ico" href="./assets/favicon.0e726a38.ico" />
   <title>Trial of Valor</title>
-  <script type="module" crossorigin src="/assets/index.4eeb94f4.js"></script>
-  <link rel="stylesheet" href="/assets/index.46e1b184.css">
+  <script type="module" crossorigin src="./assets/index.4eeb94f4.js"></script>
+  <link rel="stylesheet" href="./assets/index.46e1b184.css">
 </head>
 
 <body>
